2005-07-14 14:16 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridRightHandedBoundaryUV) added to test UV params.
	* src/unit_main.c (main) test gridRightHandedBoundaryUV, commented 
	gridRobustProject.

2005-07-14 09:38 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridUntangleBadFaceParameters) band-aid to fix
	a bad projection during save part. should be cleaned up.

2005-07-06 10:47 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) added -le option to setup spacing for
	leading edge unit problem. turned off gridCOST_CNST_VALID.

2005-06-07 13:35 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridsetcostconstraint_) turns on  
	gridCOST_FCN_JAC_SCALED_MEAN_RATIO cost when gridCOST_CNST_VALID
	bit is set.

2005-06-07 13:35 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridAR,gridCellARDerivative) added
	gridCOST_FCN_JAC_SCALED_MEAN_RATIO cost.

2005-06-07 13:10 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridMinCellJacDetDeriv2) added a differentiated
	version of gridMinCellJacDet2.

2005-06-07 12:39 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridShapeJacobianDetDeriv2) added a differentiated
	version of gridShapeJacobianDet2

2005-06-07 10:30 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridShapeJacobianDet2) added as a target for
	differentiation. added tests.

2005-06-07 09:10 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridNodeValid) call gridCostValid on all cells.
	* src/gridmpi.c (gridParallelRelaxNegativeCells) call gridNodeCostValid
	to check validity for speed increase.

2005-06-06 16:23 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCostValid) added to check mesh validity in
	consistant manner.
	* src/gridmetric.c (gridAR) calls gridCostValid to check validity.

2005-06-06 12:15 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridJacVolRatio) added debug routine to see how
	close the quadratic element corner jacobians are to the volume
