@@ -1136,6 +1136,70 @@ Grid *gridWriteTecplotSurfaceGeom(Grid *grid, char *filename)
   return grid;
 }
 
+Grid *gridWriteTecplotGeomFaceUV(Grid *grid, char *filename, int id )
+{
+  int face, nodes[3], faceId;
+  int nface, nnode;
+  int i, node;
+  double *xyz;
+  int *f2n;
+  int *g2l;
+  Grid *status;
+
+  nface = 0;
+  for (face=0; face<gridMaxFace(grid); face++) {
+    if (grid == gridFace(grid,face,nodes,&faceId) ) {
+      if (id == faceId) {
+	nface++;
+      }
+    }
+  }
+  printf("nface %d\n",nface);
+  f2n = (int *)malloc(sizeof(int)*3*nface);
+  nface = 0;
+  for (face=0; face<gridMaxFace(grid); face++) {
+    if (grid == gridFace(grid,face,nodes,&faceId) ) {
+      if (id == faceId) {
+	f2n[0+3*nface] = nodes[0];
+	f2n[1+3*nface] = nodes[1];
+	f2n[2+3*nface] = nodes[2];
+	nface++;
+      }
+    }
+  }
+  printf("nface %d\n",nface);
+  g2l = (int *)malloc(sizeof(int)*gridMaxNode(grid));
+  for (node=0; node<gridMaxNode(grid); node++) g2l[node]=EMPTY;
+  nnode = 0;
+  for (face=0; face<nface; face++) {
+    for (i=0;i<3;i++) {
+      if (EMPTY == g2l[f2n[i+3*face]]) {
+	g2l[f2n[i+3*face]] = nnode;
+	nnode++;
+      }
+    }
+  }
+  printf("nnode %d\n",nnode);
+  xyz = (double *)malloc(sizeof(double)*3*nnode);
+  for (node=0; node<3*nnode; node++) xyz[node]=0.0;
+  for (face=0; face<nface; face++) {
+    for (i=0;i<3;i++) {
+      gridNodeUV(grid,f2n[i+3*face],id,&(xyz[3*g2l[f2n[i+3*face]]]));
+      f2n[i+3*face] = g2l[f2n[i+3*face]];
+    }
+  }
+  free(g2l);
+
+  status = gridWriteTecplotTriangleZone(grid, filename,
+					nnode, xyz,
+					nface, f2n);
+  free(f2n);
+  free(xyz);
+
+  return status;
+
+}
+
 Grid *gridWriteTecplotTriangleZone(Grid *grid, char *filename,
 				   int nnode, double *xyz,
 				   int nface, int *f2n)
@@ -1161,8 +1225,6 @@ Grid *gridWriteTecplotTriangleZone(Grid *grid, char *filename,
     fprintf(grid->tecplotGeomFile, "%23.15e%23.15e%23.15e %d\n",
 	    xyz[0+3*i],xyz[1+3*i],xyz[2+3*i],0);
   }
-
-  fprintf(grid->tecplotGeomFile, "\n");
 
   for ( i=0; i<nface ; i++ ){
     fprintf(grid->tecplotGeomFile, " %9d %9d %9d\n",
